--- a/_posts/virtualization/2017-01-16-虚拟化技术.md
+++ b/_posts/virtualization/2017-01-16-虚拟化技术.md
@@ -8,7 +8,6 @@ keywords: virtualization
 ## 什么是虚拟化技术
 
 虚拟化是将计算机的各种实体资源，如服务器、网络、内存及存储等，予以抽象、转换后呈现出来，
-
 打破实体结构间的不可切割的障碍，使用户可以比原本的组态更好的方式来应用这些资源。
 
 ## 虚拟化技术的优势
@@ -25,13 +24,12 @@ keywords: virtualization
 
 * 更高的可扩展性
 
-##虚拟化技术的实现方式
+## 虚拟化技术的实现方式
 
 市场上最常见的虚拟化软件有VMWare workstation(VMWare)、VirtualBox(Oracle)、Hyper-V(Microsoft)、KVM(Redhat)
-
 、Xen等，这些软件统称之为VMM(Virtual Machine Monitor)，使用不同的虚拟化实现。
 
-###* 全虚拟化（硬件辅助虚拟化技术）
+### 全虚拟化（硬件辅助虚拟化技术）
 
 在虚拟机（VM）和硬件之间加了一个软件层--Hypervisor，或者叫做虚拟机管理程序（VMM）。
 
@@ -47,10 +45,9 @@ hypervisor 可以划分为两大类：
 
 * 缺点：Hypervisor会占用一定的资源，性能有所降低。
 
-###* 半虚拟化技术
+### 半虚拟化技术
 
 客户操作系统进行了修改，增加了一个专门的API，这个API可以将客户操作系统发出的指令进行最优化，
-
 即不需要Hypervisor耗费一定的资源进行翻译操作。
 
 ![半虚拟化](/images/virtualization/171339004723536.gif)
