--- a/_posts/virtualization/2017-01-16-虚拟化技术.md
+++ b/_posts/virtualization/2017-01-16-虚拟化技术.md
@@ -7,8 +7,7 @@ keywords: virtualization
 ---
 ## 什么是虚拟化技术
 
-虚拟化是将计算机的各种实体资源，如服务器、网络、内存及存储等，予以抽象、转换后呈现出来，
-打破实体结构间的不可切割的障碍，使用户可以比原本的组态更好的方式来应用这些资源。
+虚拟化是将计算机的各种实体资源，如服务器、网络、内存及存储等，予以抽象、转换后呈现出来，打破实体结构间的不可切割的障碍，使用户可以比原本的组态更好的方式来应用这些资源。  
 
 ## 虚拟化技术的优势
 
@@ -26,8 +25,7 @@ keywords: virtualization
 
 ## 虚拟化技术的实现方式
 
-市场上最常见的虚拟化软件有VMWare workstation(VMWare)、VirtualBox(Oracle)、Hyper-V(Microsoft)、KVM(Redhat)
-、Xen等，这些软件统称之为VMM(Virtual Machine Monitor)，使用不同的虚拟化实现。
+市场上最常见的虚拟化软件有VMWare workstation(VMWare)、VirtualBox(Oracle)、Hyper-V(Microsoft)、KVM(Redhat)、Xen等，这些软件统称之为VMM(Virtual Machine Monitor)，使用不同的虚拟化实现。
 
 ### 全虚拟化（硬件辅助虚拟化技术）
 
@@ -56,6 +54,4 @@ hypervisor 可以划分为两大类：
 
 * 优点：不需要Hypervisor耗费一定的资源进行翻译操作，性能提高
 
-* 缺点：需要修改包含该API的操作系统，比较麻烦；
-
-       但是对于某些不含该API的操作系统（主要是windows）来说，就不行能用这种方法。
+* 缺点：需要修改包含该API的操作系统，比较麻烦；而且对于某些不含该API的操作系统（主要是windows）来说，就不行能用这种方法。
