--- a/_posts/virtualization/2017-01-19-简单配置网络.md
+++ b/_posts/virtualization/2017-01-19-简单配置网络.md
@@ -1,18 +1,21 @@
 ### 通过命令行临时配置
 
-* 配置ip、netmask：
+* 配置ip、netmask
+
 ```
 # ifconfig eth0 192.168.100.200 netmask 255.255.255.0
 ```
 
-* 配置网关：
+* 配置网关
+
 ```
 # route add default gw 192.168.100.1
 ```
 
 * 修改完重启网络
+
 ```
-service network restart
+# service network restart
 ```
 
 *但以上配置ip、netmask和gateway的方法在重启后会失效，永久生效方法如下:*
@@ -20,11 +23,13 @@ service network restart
 ### 通过修改配置文件
 
 1. 禁用网卡
+
 ```
-ifdown eth0
+# ifdown eth0
 ```
 
 2. 修改/etc/sysconfig/network-scripts/ifcfg-eth0
+
 ```
 IPADDR=192.168.100.200
 NETMASK=255.255.255.0
@@ -33,11 +38,13 @@ ONBOOT=yes
 ```
 
 3. 开启网卡
+
 ```
-ifup eth0
+# ifup eth0
 ```
 
 4. 配置DNS（需要在/etc/resolv.conf中添加DNS服务器）
+
 ```
 nameserver 192.168.112.3
 ```
